[package]
name = "ferris-ci"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.57"

[dependencies]
anyhow = "1.0.57"
xshell = "0.2.2"
xflags = "0.2.4"
rusty-s3="0.3.1"
rpassword = "7.0"
ureq = "2.5.0"
rayon-core="1.9.3"
indicatif = "0.17.0"
simplerand = "1.3.0"
tar = "0.4"
zstd = { version="0.11.2+zstd.1.5.2", default-features=false }
flate2 = "1.0.22" 

serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
cargo-lock = "8.0.2"
chrono = "0.4.20"
base64 = "0.13.0"
sha2 = "0.10.2"
[profile.release]
lto = true
opt-level="z"
panic = "abort"
debug = false
strip = true 
codegen-units=1

[profile.release.package]
zstd-sys.opt-level = 3

[profile.dev.package]
zstd.opt-level = 3
zstd-sys.opt-level = 3
zstd-safe.opt-level = 3

[patch.crates-io]
indicatif = { git="https://github.com/console-rs/indicatif.git", rev="626ebdb00d3aa7edb66ea69a549f72a846255ff1"}
